<resources>
    <string name="app_name">Tlappy</string>
    <string name="game_menu">Game Menu</string>
    <string name="resume_scene">Resume Scene</string>
    <string name="restart_scene">Restart Scene</string>
    <string name="select_scene">Select Scene</string>
    <string name="play_intro">Play Intro</string>
    <string name="main_menu">Main Menu</string>
    <string name="play_tlappy">Play Flappy</string>
    <string name="resume_intro">Resume Intro</string>
    <string name="show_options">Show Options</string>
    <string name="exit_tlappy">Exit Flappy</string>
    <string name="notThisSceneYet">Not this scene yet!</string>
    <string name="scores">Scores</string>
    <string name="play">Play</string>
    <string name="hint">Hint</string>
    <string name="ok">OK</string>
    <string name="cant_show_hints">No browser / YouTube client to play the video with (video id: %s)</string>
    <string name="scene_password">Scene key:</string>
    <string name="open_scene">Opening scenes #1-#%d</string>
    <string name="scene_already_open">Scenes #1-#%d already open</string>
    <string name="incorrect_scene_key">Incorrect scene key!</string>
    <string name="give_contact_permission">Give permission to fill in player name automatically</string>
    <string name="android_developer_contact">Petr Panuška</string>
    <string name="java_developer_contact">Petr Šlechta</string>
    <string name="scene_videos_contact">Petr Diblík</string>
    <string name="flappy_github_contact">Flappy@GitHub</string>
    <string name="android_developer">Android developer: </string>
    <string name="java_developer">Java developer: </string>
    <string name="scene_videos">Scene videos: </string>
    <string name="bug_reports">Bug reports: </string>
    <string name="version">Version: </string>
    <string name="close">Close</string>
    <string name="player_name">Player name:</string>
    <string name="controls">Controls</string>
    <string name="about">About</string>
    <string name="cancel">Cancel</string>
    <string name="move_left">Press a key to move left!!</string>
    <string name="move_right">Press a key to move right!!</string>
    <string name="move_up">Press a key to move up!!</string>
    <string name="move_down">Press a key to move down!!</string>
    <string name="throw_mushroom">Press a key to throw a toadstool!!</string>
    <string name="controls_saved">Your custom controls have been saved!</string>
    <string name="controls_reset">Controls have been reset to inital state</string>
    <string name="cant_record">Can\'t record those keys!!</string>
    <string name="key_in_use">Key already in use!!</string>
    <string name="controls_menu">Controls</string>
    <string name="record_controls">Record Controls</string>
    <string name="reset_controls">Reset Controls</string>
    <string name="close_menu">Close Menu</string>
</resources>
