<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <SurfaceView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/sceneList"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/selectSceneButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            style="@style/button_blue"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:onClick="showHighScores"
            android:text="@string/scores" />

        <Button
            style="@style/button_green"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:onClick="startGame"
            android:text="@string/play" />

        <Button
            style="@style/button_yellow"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:onClick="showHint"
            android:text="@string/hint" />
    </LinearLayout>
</RelativeLayout>
